--- a/index.html
+++ b/index.html
@@ -1,30 +1,31 @@
-<!---this is just for testing purposes-->
-
-
-
-<!---This is a comment. Comments can continue until the arrow closes -->
 <!DOCTYPE html>
-<html>
-    <head>
-
-    <!---the title is the tab's name--->   <title>My first title</title>
-        
-        <link rel="stylesheet" href="style.css"> <!---linking other files, in this ex it's .css-->
-        <link rel="script" href="script.js"> <!-- this is for javascript-->
-
-    </head>
-
-    <body>
-
-        <h1 id="name"> hello </h1>
-
-        <div class="box1"> 
-
-        </div>
-
-        <a href="https://www.facebook.com"> this is a link to facebook</a>
-
-    </body>
-
-
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>BudgetWise</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Planner </a></li>
+          <li><a href="#">Calculator</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section class="welcome">
+        <h1>Welcome to BudgetWise</h1>
+        <p>Plan smart, spend smarter.</p>
+      </section>
+    </main>
+    <footer>
+      <p>© 2024 BudgetWise. All rights reserved.</p>
+    </footer>
+  </body>
 </html>
