--- a/about.html
+++ b/about.html
@@ -25,7 +25,8 @@
         <!-- Scuffed layout too lazy rn-->
         <!-- Made up a logo -->
         <img src="BudgetWise Images/BWLogo.png" alt="Logo" class="logo-photo">
-        <p>Type our goal for this website</p>
+        <p>Welcome to The BackTracker, a revolutionary online web app designed to empower individuals and groups to achieve their financial goals. By providing personalized guidance, insightful strategies, and inspirational encouragement, the BackTracker serves as a comprehensive tool for financial growth and well-being.</p>
+        <p>BackTracker is specifically tailored to meet the needs of individuals seeking to improve their financial literacy, save money, and achieve their personal wealth aspirations. Its user-friendly interface and customizable features make it accessible to individuals of all income levels and financial backgrounds. Welcome!</p>
         <p>Sincerely,</p>
         <p>BudgetWise</p>
       </section>
