--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <header>
+      <img src="images/BWLogo.png" alt="Logo">
       <nav>
         <ul>
           <li><a href="home.html">Home</a></li>
@@ -22,7 +23,7 @@
       <section class="welcome">
         <h1>Welcome to BudgetWise</h1>
         <p>Plan smart, spend smarter.</p>
-      </section>
+      
       <form action=""
             id="myForm">
         <label for="email">
@@ -41,13 +42,14 @@
                placeholder="Enter your password" required>
         <div class="wrap">
           <button type="submit">
-              Submit
+              Login
           </button>
         </div>
       </form>
       <div class="box">
-        <a class="button" href="#popup1">Not registered?Create an account!</a>
+        <a class="button" href="#popup1">Not registered? Create an account!</a>
       </div>
+    </section>
       <div id="popup1" class="overlay">
         <div class="popup">
           <h2>Registration</h2>
@@ -83,12 +85,6 @@
           </div>
         </div>
       </div> 
-    <p>Not registered? 
-        <a href="registration.html"
-          style="text-decoration: none;">
-          Create an account
-        </a>
-    </p>
     </main>
     <footer>
       <p>© 2024 BudgetWise. All rights reserved.</p>
