--- a/public/contact.html
+++ b/public/contact.html
@@ -39,9 +39,42 @@
                 <button type="submit">Send Message</button>
             </form>
         </section>
+        <div id="popup" class="popup">
+            <div class="popup-content">
+                <p id="popup-message">Message received</p>
+            </div>
+        </div>
+        
     </main>
     <footer>
-        <p>© [Year] [Your Company or Project Name]. All rights reserved.</p>
+        <p>© 2024 BudgetWise. All rights reserved.</p>
     </footer>
+
+<script>
+    document.querySelector('form').addEventListener('submit', function(event) {
+    event.preventDefault(); //prevents page from restarting
+
+    // Show the popup
+    var popup = document.getElementById('popup');
+    var body = document.querySelector('body');
+    var popupMessage = document.getElementById('popup-message');
+    popup.style.display = 'block';
+    
+    popupMessage.innerText = 'Your message has been sent to our team. Thank you for your feedback!';
+
+    //close popup when clicked or after 5 seconds
+    popup.addEventListener('click', function() {
+        popup.style.display = 'none';
+    });
+
+    setTimeout(function() {
+        popup.style.display = 'none';
+    }, 5000);
+
+    this.reset();
+});
+
+    </script>
 </body>
+
 </html>
