--- a/public/home.html
+++ b/public/home.html
@@ -14,7 +14,6 @@
             <li><a href="home.html">Home</a></li>
             <li><a href="planner.html">Planner </a></li>
             <li><a href="calculator.html">Calculator</a></li>
-            <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
@@ -22,7 +21,17 @@
       <main>
         <section class="welcome">
           <h1>Welcome to BudgetWise</h1>
-          <p>Plan smart, spend smarter.</p>
+          <h2>Plan smart, spend smarter.</h2>
+          <p>About Us:
+
+            At BudgetWise, we're more than just a budget planner; we're your financial empowerment partner. 
+            Founded with the vision to demystify financial planning and make it accessible to everyone, our 
+            goal is to help you take control of your finances with ease and confidence. We understand that 
+            managing money can be overwhelming, which is why we've designed BudgetWise to be intuitive, user-friendly, 
+            and, most importantly, effective. Whether you're saving for a dream vacation, planning for retirement, 
+            or simply trying to make ends meet, our tools are tailored to help you set realistic goals, track your 
+            progress, and achieve financial stability. With BudgetWise, you're not just planning your budget; you're 
+            paving the way to financial freed</p>
         </section>
       </main>
       <footer>
