--- a/public/calculator.html
+++ b/public/calculator.html
@@ -14,11 +14,11 @@
             <li><a href="home.html">Home</a></li>
             <li><a href="planner.html">Planner</a></li>
             <li><a href="calculator.html">Calculator</a></li>
-            <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
       </header>
+    <section class="form-group">
       <h2>Salary and Expenses Calculator</h2>
       <div id="calculator">
       <!-- Initial form -->
@@ -37,7 +37,8 @@
               <div id="totalExpenses">Total Expenses: $0. Balance: $0
               </div>
             </form> 
-      </div>  
+      </div>
+    </section>  
     <script>
     var current = 0;
     function addCat() {
