--- a/public/planner.html
+++ b/public/planner.html
@@ -14,26 +14,25 @@
           <li><a href="home.html">Home</a></li>
           <li><a href="planner.html">Planner</a></li>
           <li><a href="calculator.html">Calculator</a></li>
-          <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
 
     <div class="container">
-      <section class="note-section">
+      <section class="form-group">
         <h2>Notes</h2>
         <input type="text" placeholder="Write a note..."></input>
         <button onclick="addNote()">Add Note</button>
         <ul id="notesList"></ul>
       </section>
-      <section class="task-section">
+      <section class="form-group">
         <h2>Tasks</h2>
         <input type="text" id="taskInput" placeholder="Create a new task..." />
         <button onclick="addTask()">Add Task</button>
         <ul id="tasksList"></ul>
       </section>
-      <section class="goal-section">
+      <section class="form-group">
         <h2>Goals</h2>
         <input type="text" id="goalInput" placeholder="Set a new goal..." />
         <button onclick="addGoal()">Add Goal</button>
