--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     <main>
       <section class="welcome">
         <h1>Welcome to BudgetWise</h1>
+        <h2>Testing!!!></h2>
         <p>Plan smart, spend smarter.</p>
       
       <form action=""
