--- a/public/calculator.html
+++ b/public/calculator.html
@@ -15,89 +15,46 @@
             <li><a href="planner.html">Planner</a></li>
             <li><a href="calculator.html">Calculator</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a id="logout" href="#">Logout</a></li>
           </ul>
         </nav>
-      </header>
-      <section id="incomeSection" class="monthly-section">
-        <h2>Please enter a monthly income</h2>
-        <div id="incomeForm">
-          <label for="monthlyIncome">Monthly Income:</label><br>
-          <input type="number" id="monthlyIncome" name="monthlyIncome" placeholder="Enter Monthly Income"><br><br>
-          <button onclick="showCalculatorSection()">Continue</button>
-        </div>
-      </section>
-    <section id="calculatorSection" class="form-group" style="display: none";>
+    </header>
+    <section class="calculator-section">
+     
       <h2>Salary and Expenses Calculator</h2>
-      <div id="calculator">
+      <label for="totalIncome">Please enter your monthly income: </label>
+      <input type="number"
+             min="0"
+             step=".01"
+             id="totalIncome"
+             name="totalIncome"
+             placeholder="Income"
+             oninput="updateTotalIncome()">
       <!-- Initial form -->
-      <form action=""
-            id="calculatorForm">
-        <label for="setBudget">Enter an expense you wish to create and a percentage for it</label>
-        <br>
-        <label for="expenseName">Expense Name:</label><br>
-        <input type="text" id="expenseName" name="expenseName" placeholder="Enter Expense"><br>
-        <label for="expensePercentage">Expense Percent (1-100):</label><br>
-        <input type="number" id="expensePercentage" name="expensePercentage" placeholder="Percent"><br><br>
+      <form id="expenseForm1">
+        <label for="expenseName1">Expense Name:</label><br>
+        <input type="text"
+                id="expenseName1"
+                class="expenseName"
+                name="expenseName1"
+                placeholder="Expense"><br>
+        <label for="percent1">Expense Percent (1-100):</label><br>
+        <input type="number"
+                min="0"
+                max="100"
+                id="percent1"
+                class="percent"
+                placeholder="Percent"><br><br>
       </form>
-    </div>
-    <button onclick="addCat()">Add Category</button>
-    <button onclick="showIncomeSection()">Change monthly income</button>
-              <!-- <div id="expensesList"></div> --->
-              <div id="totalExpenses">Total Expenses: $0. Balance: $0
-              </div>
-            </form> 
-      </div>
-    </section>  
-    <script>
-    var current = 0;
-    function addCat() {
-      // Create a new form
-      var newForm = document.createElement("calculator");
-      newForm.id = "calculator-group";
-
-      // Add elements to the new form
-      var expenseLabel = document.createElement("label");
-      expenseLabel.setAttribute("for", "expenseName");
-      expenseLabel.textContent = "Expense Name:";
-      newForm.appendChild(expenseLabel);
-
-      var expenseInput = document.createElement("input");
-      expenseInput.type = "text";
-      expenseInput.id = "expenseName";
-      expenseInput.name = "expenseName";
-      newForm.appendChild(expenseInput);
-
-      var percentageLabel = document.createElement("label");
-      percentageLabel.setAttribute("for", "expensePercentage");
-      percentageLabel.textContent = "Expense Percent (1-100):";
-      newForm.appendChild(percentageLabel);
-
-      var percentageInput = document.createElement("input");
-      percentageInput.type = "number";
-      percentageInput.id = "expensePercentage";
-      percentageInput.name = "expensePercentage";
-      newForm.appendChild(percentageInput);
-
-      if (current <= 9) {
-        // Append the new form to the container
-        document.getElementById("calculator").appendChild(newForm);
-        current++;
-      } else {
-        alert("Categories limit reached! Cannot proceed.");
-      }  
-    }
-    </script>
-    <script>
-        function showCalculatorSection() {
-          document.getElementById("incomeSection").style.display = "none";
-          document.getElementById("calculatorSection").style.display = "block";
-        }
-    </script>
-     <script>
-      function showIncomeSection() {
-        document.getElementById("incomeSection").style.display = "block";
-        document.getElementById("calculatorSection").style.display = "none";
-      }
-  </script>
+      <div id="additionalExpenses"></div>
+      <button id="addCategory">Add Category</button>
+      <button id="updateLeftovers">Update Leftovers</button>
+      <button id="deleteForm">Delete</button>
+      <!-- <div id="expensesList"></div> --->
+      <div id="leftoversIncome"></div>      
+    </section>
+    <!--- JavaScript external files-->
+    <script type="module" src="calculator.js"></script>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
