--- a/public/home.html
+++ b/public/home.html
@@ -15,15 +15,15 @@
             <li><a href="planner.html">Planner </a></li>
             <li><a href="calculator.html">Calculator</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a id="logout" href="#">Logout</a></li>
           </ul>
         </nav>
       </header>
       <main>
         <section class="welcome">
           <h1>Welcome to BudgetWise</h1>
-          <h2>Plan smart, spend smarter.</h2>
-          <p>About Us:
-
+          <h2>Plan smart, spend smarter.</h2><br>
+          <p>
             At BudgetWise, we're more than just a budget planner; we're your financial empowerment partner. 
             Founded with the vision to demystify financial planning and make it accessible to everyone, our 
             goal is to help you take control of your finances with ease and confidence. We understand that 
@@ -37,6 +37,8 @@
       <footer>
         <p>© 2024 BudgetWise. All rights reserved.</p>
       </footer>
+      <!--- JavaScript external files-->
+    <script type="module" src="script.js"></script>
     </body>
   </section>
 </html>
