--- a/public/planner.html
+++ b/public/planner.html
@@ -15,6 +15,7 @@
           <li><a href="planner.html">Planner</a></li>
           <li><a href="calculator.html">Calculator</a></li>
           <li><a href="contact.html">Contact</a></li>
+          <li><a id="logout" href="#">Logout</a></li>
         </ul>
       </nav>
     </header>
