Fixed minor bugs

--- a/public/planner.html
+++ b/public/planner.html
@@ -38,7 +38,10 @@
         <input type="text" id="goalInput" placeholder="Set a new goal..." />
         <button onclick="addGoal()">Add Goal</button>
         <ul id="goalsList"></ul>
+
       </section>
     </div>
+    <!--- JavaScript external files-->
+    <script type="module" src="script.js"></script>
   </body>
 </html>
