--- a/public/index.html
+++ b/public/index.html
@@ -30,12 +30,14 @@
         </label>
         <input type="text"
                id="loginEmail"
+               autocomplete="off"
                placeholder="Enter your email" required>
         <label for="password">
               Password:
         </label>
         <input type="password"
                id="loginPassword"
+               autocomplete="off"
                placeholder="Enter your password" required>
         <div class="wrap">
           <button type="submit">
@@ -55,23 +57,24 @@
             <form action=""
                   id="regForm">
             <label for="regEmail">Email:</label>
-            <input
-                    type="regEmail"
-                    id="regEmail"
-                    required/>
+            <input type="regEmail"
+                   id="regEmail"
+                   autocomplete="off"
+                   required/>
             <label for="regPassword">Password:</label>
             <input type="password"
-                    id="regPassword"
-                    pattern="^(?=.*\d)(?=.*[a-zA-Z])(?=.*[^a-zA-Z0-9])\S{8,}$"
-                    title="Password must contain at least one number, 
+                   id="regPassword"
+                   autocomplete="off"
+                   pattern="^(?=.*\d)(?=.*[a-zA-Z])(?=.*[^a-zA-Z0-9])\S{8,}$"
+                   title="Password must contain at least one number, 
                           one alphabet, one symbol, and be at 
                           least 8 characters long"
-                    required/>
+                   required/>
             <label for="regRepassword">Re-type Password:</label>
-            <input
-                    type="password"
-                    id="regRepassword"
-                    required/>
+            <input type="password"
+                   id="regRepassword"
+                   autocomplete="off"
+                   required/>
             <button type="submit"> Register </button>
             </form>
           </div>
