Fixing minor bugs affecting stylesheets confusion

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BudgetWise</title>
-    <link rel="stylesheet" href="indexstyle.css" />
+    <link rel="stylesheet" href="indexstyle.css"/>
   </head>
   <body>
     <header>
@@ -39,14 +39,12 @@
                id="loginPassword"
                autocomplete="off"
                placeholder="Enter your password" required>
-        <div class="wrap">
-          <button type="submit">
+        <button type="submit">
               Login
-          </button>
-        </div>
+        </button>
       </form>
       <div class="box">
-        <a class="button" href="#popup1">Not registered? Create an account!</a>
+        <a href="#popup1">Not registered? Create an account!</a>
       </div>
     </section>
     <div id="popup1" class="overlay">
