--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,6 @@
       <nav>
         <ul>
           <li><a href="home.html">Home</a></li>
-          <li><a href="planner.html">Planner </a></li>
-          <li><a href="calculator.html">Calculator</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
@@ -43,6 +41,7 @@
               Login
         </button>
       </form>
+      <button id="resetPW"> Forgot Password?</button>
       <div class="box">
         <a href="#popup1">Not registered? Create an account!</a>
       </div>
