--- a/public/planner.html
+++ b/public/planner.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Planner - BudgetWise</title>
-    <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="planner.css" />
   </head>
   <body>
     <header>
       <nav>
-        <ul>
+        <ul id="myNavBar">
           <li><a href="home.html">Home</a></li>
           <li><a href="planner.html">Planner</a></li>
           <li><a href="calculator.html">Calculator</a></li>
@@ -19,29 +18,117 @@
         </ul>
       </nav>
     </header>
-
     <div class="container">
       <section class="form-group">
-        <h2>Notes</h2>
-        <input type="text" placeholder="Write a note..."></input>
-        <button onclick="addNote()">Add Note</button>
-        <ul id="notesList"></ul>
-      </section>
-      <section class="form-group">
-        <h2>Tasks</h2>
-        <input type="text" id="taskInput" placeholder="Create a new task..." />
-        <button onclick="addTask()">Add Task</button>
-        <ul id="tasksList"></ul>
-      </section>
-      <section class="form-group">
-        <h2>Goals</h2>
-        <input type="text" id="goalInput" placeholder="Set a new goal..." />
-        <button onclick="addGoal()">Add Goal</button>
-        <ul id="goalsList"></ul>
+        <div class="noteHeader">
+          <h2>Notes</h2>
+          <input type="text" id="noteInput" placeholder="Write a note..."></input>
+          <span id="addNoteBtn" class="addBtn">Add Note</span>
+          <div id="notesList"></div>
+        </div>
+        <div class="taskHeader">
+          <h2>Tasks</h2>
+          <input type="text" id="myInput" placeholder="Title...">
+          <span onclick="newElement()" class="addBtn">Add Task</span>
+        </div>
+      <ul id="otrUL"></ul>
+      <ul id="myUL"></ul>
 
       </section>
-    </div>
-    <!--- JavaScript external files-->
-    <script type="module" src="script.js"></script>
-  </body>
-</html>
+    </div>  
+
+
+
+<script>
+//////////////////////   CODE FOR NOTES   //////////////////////
+document.getElementById('addNoteBtn').addEventListener('click', function() {
+    var noteInput = document.getElementById('noteInput');
+    var note = noteInput.value.trim();
+    
+    if (note !== '') {
+        addNoteToList(note);
+        noteInput.value = ''; // Clear the input box after adding the note
+    } else {
+        alert('Please enter a note.');
+    }
+});
+
+function addNoteToList(noteText) {
+  var li = document.createElement("li");
+  var inputValueNote = document.getElementById("noteInput").value;
+  var t = document.createTextNode(inputValue);
+  li.appendChild(t);
+  if (inputValueNote === '') {
+    alert("You must write something!");
+  } else {
+    document.getElementById("otrUL").appendChild(li);
+  }
+  document.getElementById("noteInput").value = "";
+
+  var span = document.createElement("SPAN");
+  var txt = document.createTextNode("\u00D7");
+  span.className = "close";
+  span.appendChild(txt);
+  li.appendChild(span);
+
+  for (i = 0; i < close.length; i++) {
+    close[i].onclick = function() {
+      var div = this.parentElement;
+      div.style.display = "none";
+    }
+  }
+}
+
+
+
+
+//////////////////////   CODE FOR TASKS   //////////////////////
+  // Create a "close" button and append it to each list item
+var myNodelist = document.getElementById("myUL");
+var i;
+for (i = 0; i < myNodelist.length; i++) {
+  var span = document.createElement("SPAN");
+  var txt = document.createTextNode("\u00D7");
+  span.className = "close";
+  span.appendChild(txt);
+  myNodelist[i].appendChild(span);
+}
+
+// Click on a close button to hide the current list item
+var close = document.getElementsByClassName("close");
+var i;
+for (i = 0; i < close.length; i++) {
+  close[i].onclick = function() {
+    var div = this.parentElement;
+    div.style.display = "none";
+  }
+}
+
+
+// Create a new list item when clicking on the "Add" button
+function newElement() {
+  var li = document.createElement("li");
+  var inputValueTask = document.getElementById("myInput").value;
+  var t = document.createTextNode(inputValueTask);
+  li.appendChild(t);
+  if (inputValue === '') {
+    alert("You must write something!");
+  } else {
+    document.getElementById("myUL").appendChild(li);
+  }
+  document.getElementById("myInput").value = "";
+
+  var span = document.createElement("SPAN");
+  var txt = document.createTextNode("\u00D7");
+  span.className = "close";
+  span.appendChild(txt);
+  li.appendChild(span);
+
+  for (i = 0; i < close.length; i++) {
+    close[i].onclick = function() {
+      var div = this.parentElement;
+      div.style.display = "none";
+    }
+  }
+}
+</script>
