--- a/public/home.html
+++ b/public/home.html
@@ -11,10 +11,9 @@
       <header>
         <nav>
           <ul>
+            <li><a href="index.html">Main</a></li>
             <li><a href="home.html">Home</a></li>
-            <li><a href="planner.html">Planner </a></li>
-            <li><a href="calculator.html">Calculator</a></li>
-            <li><a id="logout" href="#">Logout</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
       </header>
