--- a/public/planner.html
+++ b/public/planner.html
@@ -10,10 +10,8 @@
     <header>
       <nav>
         <ul id="myNavBar">
-          <li><a href="home.html">Home</a></li>
-          <li><a href="planner.html">Planner</a></li>
+          <li><a href="planner.html">To-Do</a></li>
           <li><a href="calculator.html">Calculator</a></li>
-          <li><a href="contact.html">Contact</a></li>
           <li><a id="logout" href="#">Logout</a></li>
         </ul>
       </nav>
