Fixed more bugs...

--- a/public/planner.html
+++ b/public/planner.html
@@ -20,7 +20,7 @@
       <section class="form-group">
         <div class="taskHeader">
           <h2>Tasks</h2>
-          <input type="text" id="myInput" placeholder="Title...">
+          <input type="text" id="myInput" placeholder="Create a new task...">
           <span onclick="newElement()" class="addBtn">Add Task</span>
         </div>
       <ul id="myUL"></ul>
