--- a/public/planner.html
+++ b/public/planner.html
@@ -17,66 +17,89 @@
       </nav>
     </header>
     <div class="container">
+      <!-- Tasks Section  -->
       <section class="form-group">
         <div class="taskHeader">
           <h2>Tasks</h2>
           <input type="text" id="myInput" placeholder="Create a new task...">
-          <span onclick="newElement()" class="addBtn">Add Task</span>
+          <span onclick="newElement('myUL', 'myInput')" class="addBtn">Add Task</span>
         </div>
-      <ul id="myUL"></ul>
+        <ul id="myUL"></ul>
       </section>
-    </div>  
+  
+      <!-- Notes Section -->
+      <section class="form-group">
+        <div class="noteHeader">
+          <h2>Notes</h2>
+          <input type="text" id="noteInput" placeholder="Add a new note...">
+          <span onclick="newElement('noteUL', 'noteInput')" class="addBtn">Add Note</span>
+        </div>
+        <ul id="noteUL"></ul>
+      </section>
+  
+      <!-- Goals Section -->
+      <section class="form-group">
+        <div class="goalHeader">
+          <h2>Goals</h2>
+          <input type="text" id="goalInput" placeholder="Set a new goal...">
+          <span onclick="newElement('goalUL', 'goalInput')" class="addBtn">Add Goal</span>
+        </div>
+        <ul id="goalUL"></ul>
+      </section>
+    </div>
 
     <script>
       //////////////////////   CODE FOR TASKS   //////////////////////
-      // Create a "close" button and append it to each list item
-      var myNodelist = document.getElementById("myUL");
-      var i;
-      for (i = 0; i < myNodelist.length; i++) {
-        var span = document.createElement("SPAN");
-        var txt = document.createTextNode("\u00D7");
-        span.className = "close";
-        span.appendChild(txt);
-        myNodelist[i].appendChild(span);
+    // Generalized function to add a new element
+    function newElement(listId, inputId) {
+      var ul = document.getElementById(listId);
+      var input = document.getElementById(inputId);
+      var inputValue = input.value;
+      var li = document.createElement("li");
+      var textNode = document.createTextNode(inputValue);
+
+      if (inputValue === '') {
+        alert("You must write something!");
+      } else {
+        li.appendChild(textNode);
+        ul.appendChild(li);
+        input.value = ""; // Clear the input after adding
       }
 
-      // Click on a close button to hide the current list item
-      var close = document.getElementsByClassName("close");
-      var i;
-      for (i = 0; i < close.length; i++) {
-        close[i].onclick = function() {
-          var div = this.parentElement;
-          div.style.display = "none";
-        }
-      }
+      var span = document.createElement("SPAN");
+      var txt = document.createTextNode("\u00D7");
+      span.className = "close";
+      span.appendChild(txt);
+      li.appendChild(span);
 
+      span.onclick = function () {
+        var div = this.parentElement;
+        div.style.display = "none";
+      };
+    }
 
-      // Create a new list item when clicking on the "Add" button
-      function newElement() {
-        var li = document.createElement("li");
-        var inputValue = document.getElementById("myInput").value;
-        var t = document.createTextNode(inputValue);
-        li.appendChild(t);
-        if (inputValue === '') {
-          alert("You must write something!");
-        } else {
-          document.getElementById("myUL").appendChild(li);
-        }
-        document.getElementById("myInput").value = "";
-
+    // Function to attach close functionality to list items
+    function addCloseButtonToListItems() {
+      var listItems = document.querySelectorAll('li');
+      listItems.forEach(function (item) {
         var span = document.createElement("SPAN");
         var txt = document.createTextNode("\u00D7");
-        span.className = "close";
-        span.appendChild(txt);
-        li.appendChild(span);
-
-        for (i = 0; i < close.length; i++) {
-          close[i].onclick = function() {
+        if (item.getElementsByClassName("close").length == 0) {
+          span.className = "close";
+          span.appendChild(txt);
+          item.appendChild(span);
+          span.onclick = function () {
             var div = this.parentElement;
             div.style.display = "none";
-          }
+          };
         }
-      }
+      });
+    }
+
+    // Initialize list items with close buttons
+    window.onload = function () {
+      addCloseButtonToListItems();
+    };  
     </script>
 
 </html>
