fixed grammatical errors and accurately described project

--- a/public/home.html
+++ b/public/home.html
@@ -23,9 +23,9 @@
           <h2>Plan smart, spend smarter.</h2><br>
           <p>
             At BudgetWise, we're more than just a budget planner; we're your financial empowerment partner. 
-            Founded with the vision to demystify financial planning and make it accessible to everyone, our 
-            goal is to help you take control of your finances with ease and confidence. We understand that 
-            managing money can be overwhelming, which is why we've designed BudgetWise to be intuitive, user-friendly, 
+            We had the vision to organize financial planning and make it accessible to everyone; our 
+            goal is to help you take control of your finances easily and confidently. 
+            Managing money can be overwhelming, so we've designed BackTracker to be intuitive, user-friendly, 
             and, most importantly, effective. Whether you're saving for a dream vacation, planning for retirement, 
             or simply trying to make ends meet, our tools are tailored to help you set realistic goals, track your 
             progress, and achieve financial stability. With BudgetWise, you're not just planning your budget; you're 
