--- a/public/calculator.html
+++ b/public/calculator.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
           <ul>
-            <li><a href="planner.html">To-Do</a></li>
+            <li><a href="planner.html">Planner</a></li>
             <li><a href="calculator.html">Calculator</a></li>
             <li><a id="logout" href="#">Logout</a></li>
           </ul>
