--- a/public/planner.html
+++ b/public/planner.html
@@ -10,7 +10,7 @@
     <header>
       <nav>
         <ul id="myNavBar">
-          <li><a href="planner.html">To-Do</a></li>
+          <li><a href="planner.html">Planner</a></li>
           <li><a href="calculator.html">Calculator</a></li>
           <li><a id="logout" href="#">Logout</a></li>
         </ul>
